# the-solitary-castle-in-the-mirror-cli

./: README.ja.md  README.md  pyproject.toml
.github/workflows/: build-and-push.yml  publish.yml  testing.yml
environments/: Dockerfile
tests/: test_core.py  test_date.py  test_main.py
the_solitary_castle_in_the_mirror/: __init__.py  __main__.py  _date.py  _types.py  constants.py  core.py
