[project]
name = "kojo-fan-art"
version = "0.0.1"
requires-python = ">=3.8"
license = { text = "MIT License" }

[project.scripts]
kojo-day = "the_solitary_castle_in_the_mirror.__main__:main"

[project.optional-dependencies]
dev = [
    "taskipy",
    "black",
    "isort",
    "autoflake",
    "pyupgrade",
    "pytest",
    "pytest-randomly",
    "flake8",
    "mypy",
]

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest"
post_test = "task check"
format = "task format_autoflake && task format_black && task format_isort"
format_autoflake = "autoflake $(find the_solitary_castle_in_the_mirror -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find the_solitary_castle_in_the_mirror -name '*.py') setup.py"
format_black = "black -l 79 the_solitary_castle_in_the_mirror setup.py"
format_isort = "isort --profile black -l 79 the_solitary_castle_in_the_mirror setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 the_solitary_castle_in_the_mirror"
check_mypy = "mypy the_solitary_castle_in_the_mirror"
