[project]
name = "kojo-fan-art"
version = "0.0.1"
requires-python = ">=3.8"
license = { text = "MIT License" }

[project.scripts]
kojo-day = "the_solitary_castle_in_the_mirror.__main__:main"

[project.optional-dependencies]
dev = [
    "taskipy",
    "black",
    "isort",
    "autoflake",
    "pyupgrade",
    "pytest",
    "pytest-randomly",
    "flake8",
    "mypy",
]

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest --doctest-modules"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "autoflake --in-place --remove-all-unused-imports $(find the_solitary_castle_in_the_mirror tests -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find the_solitary_castle_in_the_mirror tests -name '*.py') setup.py"
format_black = "black -l 79 the_solitary_castle_in_the_mirror tests setup.py"
format_isort = "isort --profile black -l 79 the_solitary_castle_in_the_mirror tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 the_solitary_castle_in_the_mirror tests"
check_mypy = "mypy the_solitary_castle_in_the_mirror tests"
