[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kojo-fan-art"
description = "Fan art project for \"Lonely Castle in the Mirror\"(『かがみの孤城』)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ftnext/the-solitary-castle-in-the-mirror-cli"

[project.scripts]
kojo-day = "the_solitary_castle_in_the_mirror.__main__:main"

[project.optional-dependencies]
dev = [
    "taskipy",
    "black",
    "isort",
    "autoflake",
    "pyupgrade",
    "pytest",
    "pytest-randomly",
    "freezegun",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "the_solitary_castle_in_the_mirror.__version__" }

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest --doctest-modules"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "autoflake --in-place --remove-all-unused-imports $(find the_solitary_castle_in_the_mirror tests -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find the_solitary_castle_in_the_mirror tests -name '*.py') setup.py"
format_black = "black -l 79 the_solitary_castle_in_the_mirror tests setup.py"
format_isort = "isort --profile black -l 79 the_solitary_castle_in_the_mirror tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 the_solitary_castle_in_the_mirror tests"
check_mypy = "mypy the_solitary_castle_in_the_mirror tests"
